--- a/css/style.css
+++ b/css/style.css
@@ -11,13 +11,10 @@
 
 body {
   background-image: linear-gradient(
-      171deg,
-      rgba(58, 58, 158, 0.8),
-      rgba(136, 136, 206, 0.5)
-    ),
-    url(/bg-img.jpg);
-  background-position: center;
-  background-repeat: no-repeat;
+    171deg,
+    rgba(58, 58, 158, 0.8),
+    rgba(136, 136, 206, 0.5)
+  );
 }
 
 body {
